Updates to API server and clients
