# turbinia/api/openapi.yaml
@@ -534,6 +534,33 @@ paths:
       summary: Get Request Status
       tags:
       - Turbinia Requests
+  /api/result/plasofile/{task_id}:
+    get:
+      operationId: get_plaso_file
+      parameters:
+      - in: path
+        name: task_id
+        required: true
+        schema:
+          title: Task Id
+          type: string
+      responses:
+        '200':
+          content:
+            application/octet-stream:
+              schema:
+                format: binary
+                type: string
+          description: Successful Response
+        '422':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HTTPValidationError'
+          description: Validation Error
+      summary: Get Plaso File
+      tags:
+      - Turbinia Request Results
   /api/result/request/{request_id}:
     get:
       description: Retrieve request output.
