# turbinia/api/routes/result.py
@@ -15,9 +15,10 @@
 """Turbinia API - Result router"""
 
 import logging
+import os
 
 from fastapi import HTTPException, APIRouter
-from fastapi.responses import StreamingResponse
+from fastapi.responses import StreamingResponse, FileResponse
 from fastapi.requests import Request
 
 from turbinia import config as turbinia_config
@@ -28,7 +29,7 @@ log = logging.getLogger('turbinia')
 
 router = APIRouter(prefix='/result', tags=['Turbinia Request Results'])
 
-_ATTACHMENT_RESPONSE = {
+ATTACHMENT_RESPONSE = {
     '200': {
         'content': {
             'application/octet-stream': {
@@ -44,11 +45,10 @@ _ATTACHMENT_RESPONSE = {
 
 @router.get(
     '/task/{task_id}', response_class=StreamingResponse,
-    responses=_ATTACHMENT_RESPONSE)
-async def get_task_output(request: Request, task_id: str):
+    responses=ATTACHMENT_RESPONSE)
+async def get_task_output(request: Request, task_id: str) -> StreamingResponse:
   """Retrieves a task's output files."""
   # Get the request_id for the task. This is needed to find the right path.
-  data = None
   _state_manager = state_manager.get_state_manager()
   tasks = _state_manager.get_task_data(
       instance=turbinia_config.INSTANCE_ID, task_id=task_id)
@@ -59,29 +59,54 @@ async def get_task_output(request: Request, task_id: str):
   output_path = api_utils.get_task_output_path(request_id, task_id)
 
   if request_id and output_path:
-    data: bytes = api_utils.create_tarball(output_path)
-
-  if not data:
+    return StreamingResponse(
+        api_utils.create_tarball(output_path),
+        headers={
+          'Content-Disposition': f'attachment;filename={task_id}.tgz',
+          'Transfer-Encoding': 'chunked'})
+  else:
     raise HTTPException(
-        status_code=500, detail='Unable to retrieve task output files.')
-  return StreamingResponse(
-      data,
-      headers={"Content-Disposition": f'attachment;filename={task_id}.tgz'})
-
+        status_code=404, detail='The requested file was not found.')
 
 @router.get(
     '/request/{request_id}', response_class=StreamingResponse,
-    responses=_ATTACHMENT_RESPONSE)
-async def get_request_output(request: Request, request_id: str):
+    responses=ATTACHMENT_RESPONSE)
+async def get_request_output(
+    request: Request, request_id: str) -> StreamingResponse:
   """Retrieve request output."""
-  data = None
+  if not request_id:
+    raise HTTPException(status_code=404, detail='Request not found.')
+
   request_output_path = api_utils.get_request_output_path(request_id)
   if request_output_path:
-    data: bytes = api_utils.create_tarball(request_output_path)
-
-  if not data:
+    return StreamingResponse(
+        api_utils.create_tarball(request_output_path),
+        headers={
+          'Content-Disposition': f'attachment;filename={request_id}.tgz',
+          'Transfer-Encoding': 'chunked'})
+  else:
     raise HTTPException(
-        status_code=500, detail='Unable to retrieve task output files.')
-  return StreamingResponse(
-      data,
-      headers={"Content-Disposition": f'attachment;filename={request_id}.tgz'})
+        status_code=404, detail='The requested file was not found.')
+
+@router.get('/plasofile/{task_id}', response_class=FileResponse,
+    responses=ATTACHMENT_RESPONSE)
+async def get_plaso_file(request: Request, task_id: str) -> FileResponse:
+  """Retrieves a task's Plaso file."""
+  if not task_id:
+    raise HTTPException(status_code=404, detail='Task identifier not provided.')
+
+  _state_manager = state_manager.get_state_manager()
+  tasks = _state_manager.get_task_data(
+      instance=turbinia_config.INSTANCE_ID, task_id=task_id)
+  if not tasks:
+    raise HTTPException(status_code=404, detail=f'Task {task_id:s} not found.')
+
+  filename = f'{task_id}.plaso'
+  request_id = tasks[0].get('request_id')
+  output_path = api_utils.get_task_output_path(request_id, task_id)
+  plaso_file_path = os.path.join(output_path, filename)
+
+  if os.path.exists(plaso_file_path):
+    return FileResponse(plaso_file_path, filename=filename)
+  raise HTTPException(
+      status_code=404, detail=f'File {filename} could not be found.')
